--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,6 +8,10 @@ body {
     font-size:16px;
 }
 
+.separator{
+    margin-top:20px;
+}
+
 .event {
     border-radius:4px;
     -webkit-border-radius:4px;
@@ -30,12 +34,13 @@ body {
 /*obs³uga menu*/
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: black;
     position: relative;
 }
 
 .topnav #myLinks {
     display: none;
+    border-top:1px solid black;
 }
 
 .topnav a {
@@ -55,8 +60,8 @@ body {
 }
 
 .topnav a:hover {
-    background-color: rgba(168, 164, 164, 0.55);
-    color: black;
+    background-color: #4CAF50;
+    color: white;
 }
 
 .topnav input[type=text] {
@@ -83,13 +88,12 @@ section {
 }
 
 ::-moz-placeholder {
-    color: #fff;
+    color:silver;
 }
 
 .search-focus {
     background-image: url("../images/search-icon.png");
     background-repeat: no-repeat;
-    border: 1px solid #ccc;
     outline: none;
     background-size: 22px;
     background-position: 5px;
@@ -100,39 +104,52 @@ section {
 }
 
 .search-focus:focus {
+    border-radius: 0px;
     text-align: right;
+    height: 39px;
     width: 45%;
-}
-@import 'https://fonts.googleapis.com/css?family=Dosis|Roboto:300,400';
-
-* {
-    margin: 0;
-    padding: 0;
+    text-transform:uppercase
 }
 
-body {
-    background: #ffc185;
+.searchTip {
+    width: 45%;
+    font-size: 16px;
+    float: right;
+    margin-right: 10px;
 }
 
-.container {
+.searchTip #liTips{
+    display: none;
     position: absolute;
-    width: auto;
-    height: auto;
-    top: calc(50% - 240px);
-    left: calc(50% - 160px);
+    width: 45%;
+    background-color: white;
+    border-bottom: 1px solid #4CAF50;
+    border-left: 1px solid #4CAF50;
+    border-right: 1px solid #4CAF50;
+    overflow:auto;
+    max-height:75px;
+    border-bottom-left-radius: 20px;
+    margin-right: 10px;
 }
 
+
+/*Logowanie*/
 form {
     position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left:0;
+    right:0;
     text-align: center;
     background: #fff;
     width: 310px;
     height: 470px;
     border-radius: 5px;
-    padding: 30px 20px 0 20px;
+    padding: 50px 20px 20px 20px;
     box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.25);
     box-sizing: border-box;
 }
+
 /*JUST ENTER....*/
 p {
     font-family: 'Roboto', sans-serif;
@@ -217,7 +234,7 @@ button {
                 button.form-btn.sx.back:hover {
                     background-color: rgba(0, 0, 0, 0.35);
                 }
-/*Sign up*/
+        /*Sign up*/
         button.form-btn.dx {
             right: 0;
             border-radius: 0 0 5px 0;
