--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,15 +1,73 @@
-body {
+.body {
 	background-color:white;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     height:100%;
-    margin:0px;
+    margin:auto;
     text-transform:uppercase;
     width:100%;
     font-size:16px;
 }
 
+.dataBody{
+    margin-right:30px;
+}
+
 .separator{
     margin-top:20px;
+}
+
+.historyBox {
+    border: 1px solid #4CAF50;
+    border-radius: 40px;
+    background-image: linear-gradient(#f5faeb,rgba(218, 254, 166, 0.9));
+    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.25);
+    padding:initial;
+    width: 75%;
+    overflow: auto;
+    margin-bottom:30px;
+    margin:auto;
+    margin-bottom:20px;
+    text-align:center;
+}
+
+.cantorText {
+    margin-top:10px;
+    font-weight:bold;
+    text-transform:uppercase;
+    font-size:16px;
+}
+
+.streetText {
+    font-size: 15px;
+    margin-top: 10px;
+    color: #0fbcf5;
+}
+
+.courseText {
+    margin-top:10px;
+    font-size:22px;
+    font-weight:bold;
+    text-transform:uppercase;
+}
+
+.locationText {
+    font-size:15px;
+    margin-top:10px;
+    margin-bottom:10px;
+    color:red;
+    font-weight:bold;
+}
+
+.testHistory {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.text {
+    margin: auto;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .event {
@@ -31,7 +89,7 @@ body {
     display:none;
 }
 
-/*obs³uga menu*/
+/*obsï¿½uga menu*/
 .topnav {
     overflow: hidden;
     background-color: black;
@@ -78,59 +136,6 @@ body {
     color: white;
 }
 
-/*ustawienia dla wyszukiwarki*/
-section {
-    padding: 5em;
-}
-
-::-webkit-input-placeholder {
-    color:  black;
-}
-
-::-moz-placeholder {
-    color:silver;
-}
-
-.search-focus {
-    background-image: url("../images/search-icon.png");
-    background-repeat: no-repeat;
-    outline: none;
-    background-size: 22px;
-    background-position: 5px;
-    border-radius: 30px;
-    width: 30px;
-    height: 30px;
-    transition: all .5s;
-}
-
-.search-focus:focus {
-    border-radius: 0px;
-    text-align: right;
-    height: 39px;
-    width: 45%;
-    text-transform:uppercase
-}
-
-.searchTip {
-    width: 45%;
-    font-size: 16px;
-    float: right;
-    margin-right: 10px;
-}
-
-.searchTip #liTips{
-    display: none;
-    position: absolute;
-    width: 45%;
-    background-color: white;
-    border-bottom: 1px solid #4CAF50;
-    border-left: 1px solid #4CAF50;
-    border-right: 1px solid #4CAF50;
-    overflow:auto;
-    max-height:75px;
-    border-bottom-left-radius: 20px;
-    margin-right: 10px;
-}
 
 
 /*Logowanie*/
@@ -227,12 +232,12 @@ button {
             }
 
             button.form-btn.sx.back {
-                background-color: rgba(0, 0, 0, 0.15);
+                background-color: rgba(76, 175, 80, 0.35);
                 transition: all 0.3s linear;
             }
 
                 button.form-btn.sx.back:hover {
-                    background-color: rgba(0, 0, 0, 0.35);
+                    background-color: rgba(76, 175, 80, 0.65);
                 }
         /*Sign up*/
         button.form-btn.dx {
@@ -284,13 +289,13 @@ input {
 }
 
 .signIn {
-    z-index: 1;
-    transform: perspective(100px) translate3d(100px, 0px, -30px);
-    opacity: 0.5;
+    z-index: 2;
 }
 
 .signUp {
-    z-index: 2;
+    z-index: 1;
+    transform: perspective(100px) translate3d(100px, 0px, -30px);
+    opacity: 0.5;
 }
 
 .active-dx {
@@ -386,3 +391,28 @@ input {
         opacity: 1;
     }
 }
+
+
+
+#board {
+    background-color: #ccc;
+    height: 510px;
+    padding: 1px;
+    width: 510px;
+  }
+  
+  .black,
+  .white {
+      float: left;
+      height: 100px;
+      margin: 1px;
+      width: 100px;
+  }
+  
+  .black {
+    background-color: #333;
+  }
+  
+  .white {
+    background-color: #efefef;
+  }
