--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,19 +1,38 @@
 .body {
-	background-color:white;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    height:100%;
-    margin:auto;
-    text-transform:uppercase;
-    width:100%;
-    font-size:16px;
+    height: 100%;
+    margin: auto;
+    width: 100%;
+    font-size: 16px;
 }
 
-.dataBody{
-    margin-right:30px;
+.dataBody {
+    margin-right: 30px;
 }
 
 .separator{
     margin-top:20px;
+}
+
+.borderSelectOptins {
+    text-align: center;
+    background-color:rgba(248, 240, 240, 0.9);
+    border-color: #808080;
+    border-width:1px;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    width: 75%;
+}
+
+.borderText {
+    text-align: center;
+    background-color: rgba(248, 240, 240, 0.5);
+    border-color: #808080;
+    border-width: 1px;
+    border-radius: 20px;
+    width: 75%;
+    margin:auto;
+    padding:3px;
 }
 
 .historyBox {
@@ -28,6 +47,14 @@
     margin:auto;
     margin-bottom:20px;
     text-align:center;
+}
+
+.historyUser {
+    margin-top: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 16px;
+    color:red;
 }
 
 .cantorText {
@@ -70,6 +97,12 @@
     font-size: 20px;
 }
 
+.textInfo {
+    font-size: 18px;
+    text-align: center;
+    margin:0,15px,0,15px;
+}
+
 .event {
     border-radius:4px;
     -webkit-border-radius:4px;
@@ -89,7 +122,7 @@
     display:none;
 }
 
-/*obsï¿½uga menu*/
+/*obs³uga menu*/
 .topnav {
     overflow: hidden;
     background-color: black;
@@ -391,28 +424,3 @@ input {
         opacity: 1;
     }
 }
-
-
-
-#board {
-    background-color: #ccc;
-    height: 510px;
-    padding: 1px;
-    width: 510px;
-  }
-  
-  .black,
-  .white {
-      float: left;
-      height: 100px;
-      margin: 1px;
-      width: 100px;
-  }
-  
-  .black {
-    background-color: #333;
-  }
-  
-  .white {
-    background-color: #efefef;
-  }
